--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -78,7 +78,7 @@
                 <ul class="nav navbar-nav navbar-top-links navbar-right">
                     {% for nav in nav_topbar %}
                         <li {% if nav.children %}class="dropdown"{% endif %}>
-                            <a href="{{ nav.url }}" {% if nav.active %}class="active"{% endif %}
+                            <a href="{{ nav.url }}" title="{{ nav.title }}" {% if nav.active %}class="active"{% endif %}
                                     {% if nav.children %}class="dropdown-toggle" data-toggle="dropdown"{% endif %}>
                                 {% if nav.icon %}
                                     <span class="fa fa-{{ nav.icon }}"></span>
@@ -113,7 +113,7 @@
                         </li>
                     {% endif %}
                     <li>
-                        <a href="{% url 'control:user.settings' %}">
+                        <a href="{% url 'control:user.settings' %}" title="{% trans "User Settings" %}" >
                             <i class="fa fa-user"></i> {{ request.user.get_full_name }}
                         </a>
                     </li>
