--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -113,7 +113,7 @@
                         </li>
                     {% endif %}
                     <li>
-                        <a href="{% url 'control:user.settings' %}" title="{% trans "User Settings" %}" >
+                        <a href="{% url 'control:user.settings' %}" title="{% trans "Account Settings" %}" >
                             <i class="fa fa-user"></i> {{ request.user.get_full_name }}
                         </a>
                     </li>
