--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -71,6 +71,8 @@
                     <dl class="dl-horizontal">
                         <dt>{% trans "Order code" %}</dt>
                         <dd>{{ order.code }}</dd>
+                        <dt>{% trans "Order locale" %}</dt>
+                        <dd>{{ order.locale }}</dd>
                         <dt>{% trans "Order date" %}</dt>
                         <dd>{{ order.datetime }}</dd>
                         {% if order.status == "p" %}
