--- a/src/pretix/control/templates/pretixcontrol/orders/export.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/export.html
@@ -11,7 +11,9 @@
                 <h3 class="panel-title">{{ e.verbose_name }}</h3>
             </div>
             <div class="panel-body">
-                <form action="" method="post" class="form-horizontal">
+                <form action="{% url "control:event.orders.export.do" event=request.event.slug organizer=request.organizer.slug %}"
+                        method="post" class="form-horizontal" data-asynctask data-asynctask-download
+                        data-asynctask-long>
                     {% csrf_token %}
                     <input type="hidden" name="exporter" value="{{ e.identifier }}" />
                     {% bootstrap_form e.form layout='horizontal' %}
