bug fix in mail preview view
- fixed localised date values
- added locale index mapping
- added tests on multi-language event
- enhanced dummy data

--- a/src/pretix/control/templates/pretixcontrol/event/mail_settings_fragment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail_settings_fragment.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <div id="{{ item }}_preview" class="tab-pane">
                                     {% for l in request.event.settings.locales %}
-                                        <pre lang="{{ l }}" for="{{ item }}_{{ forloop.counter0 }}"></pre>
+                                        <pre lang="{{ l }}" for="{{ item }}"></pre>
                                     {% endfor %}
                                 </div>
                             </div>
