Add new option Item.min_per_order

--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -26,6 +26,7 @@
                     {% bootstrap_field form.available_from layout="horizontal" %}
                     {% bootstrap_field form.available_until layout="horizontal" %}
                     {% bootstrap_field form.max_per_order layout="horizontal" %}
+                    {% bootstrap_field form.min_per_order layout="horizontal" %}
                     {% bootstrap_field form.require_voucher layout="horizontal" %}
                     {% bootstrap_field form.hide_without_voucher layout="horizontal" %}
                     {% bootstrap_field form.allow_cancel layout="horizontal" %}
