Add attendee email field

--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -41,6 +41,8 @@
             {% bootstrap_field sform.max_items_per_order layout="horizontal" %}
             {% bootstrap_field sform.attendee_names_asked layout="horizontal" %}
             {% bootstrap_field sform.attendee_names_required layout="horizontal" %}
+            {% bootstrap_field sform.attendee_emails_asked layout="horizontal" %}
+            {% bootstrap_field sform.attendee_emails_required layout="horizontal" %}
             {% bootstrap_field sform.cancel_allow_user layout="horizontal" %}
         </fieldset>
         <fieldset>
