--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -13,22 +13,15 @@
             {% if request.method == "POST" %}
             <fieldset>
             <legend>{% trans "E-mail preview" %}</legend>
-                {% for locale, segments in output.items %}
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <strong>{% blocktrans %}For locale: {{ locale }}{% endblocktrans %}</strong>
-                            </h4>
-                        </div>
-                        <div class="panel-body">
+                <div class="tab-pane mail-preview-group">
+                    {% for locale, segments in output.items %}
+                        <pre lang="{{ locale }}" class="mail-preview">{% spaceless %}
                             {% for value in segments %}
-                                <p>
-                                    {{ value|linebreaksbr }}
-                                </p>
+                                {{ value|linebreaksbr }}
                             {% endfor %}
-                        </div>
-                    </div>
-                {% endfor %}
+                        {% endspaceless %}</pre>
+                    {% endfor %}
+                </div>
             </fieldset>
             {% endif %}
             <div class="form-group submit-group">
