Add dependencies between form fields

--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -26,6 +26,10 @@ td > .form-group > .checkbox {
   margin-bottom: 0;
 }
 
+.form-group.disabled {
+  opacity: 0.5;
+}
+
 .form-horizontal [data-formset] .form-group {
   width: 100%;
 }
