Change style of admin log entries

--- a/src/pretix/control/templates/pretixcontrol/includes/logs.html
+++ b/src/pretix/control/templates/pretixcontrol/includes/logs.html
@@ -6,12 +6,15 @@
             <p class="meta">
                 <span class="fa fa-clock-o"></span> {{ log.datetime|date:"SHORT_DATETIME_FORMAT" }}
                 {% if log.user %}
-                    <br/><span class="fa fa-user"></span> {{ log.user.get_full_name }}
                     {% if log.user.is_superuser %}
-                        <img src="{% static "pretixbase/img/pretix-icon-colored.svg" %}"
-                             data-toggle="tooltip" class="user-admin-icon"
-                             title="{% trans "This change was performed by a pretix administrator." %}">
+                        <span class="fa fa-id-card fa-danger fa-fw"
+                                data-toggle="tooltip"
+                                title="{% trans "This change was performed by a pretix administrator." %}">
+                            </span>
+                    {% else %}
+                        <span class="fa fa-user fa-fw"></span>
                     {% endif %}
+                    {{ log.user.get_full_name }}
                 {% endif %}
             </p>
 
