--- a/src/pretix/control/templates/pretixcontrol/event/index.html
+++ b/src/pretix/control/templates/pretixcontrol/event/index.html
@@ -85,12 +85,15 @@
                         </div>
                         <div class="col-lg-2 col-sm-6 col-xs-12">
                             {% if log.user %}
-                                <span class="fa fa-user"></span> {{ log.user.get_full_name }}
                                 {% if log.user.is_superuser %}
-                                    <img src="{% static "pretixbase/img/pretix-icon-colored.svg" %}"
-                                         data-toggle="tooltip" class="user-admin-icon"
-                                         title="{% trans "This change was performed by a pretix administrator." %}">
+                                    <span class="fa fa-id-card fa-danger fa-fw"
+                                            data-toggle="tooltip"
+                                            title="{% trans "This change was performed by a pretix administrator." %}">
+                                </span>
+                                {% else %}
+                                    <span class="fa fa-user fa-fw"></span>
                                 {% endif %}
+                                {{ log.user.get_full_name }}
                             {% endif %}
                         </div>
                         <div class="col-lg-2 col-sm-12 col-xs-12">
