Include category in ItemCreateForm

--- a/src/pretix/control/templates/pretixcontrol/item/create.html
+++ b/src/pretix/control/templates/pretixcontrol/item/create.html
@@ -9,6 +9,7 @@
             {% bootstrap_field form.name layout="horizontal" %}
             {% bootstrap_field form.copy_from layout="horizontal" %}
             {% bootstrap_field form.has_variations layout="horizontal" %}
+            {% bootstrap_field form.category layout="horizontal" %}
             {% bootstrap_field form.admission layout="horizontal" %}
         </fieldset>
         <fieldset>
