--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -34,7 +34,12 @@
                     <div class="col-md-4 col-md-offset-4 col-xs-12">
                         <a class="btn btn-block btn-primary btn-lg"
                                 href="{% eventurl request.event "presale:event.checkout.start" %}">
-                            <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
+                            {% if has_addon_choices %}
+                                <i class="fa fa-shopping-cart"></i> {% trans "Continue" %}
+                                </a>
+                            {% else %}
+                                <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
+                            {% endif %}
                         </a>
                     </div>
                     <div class="clearfix"></div>
