--- a/src/pretix/presale/templates/pretixpresale/event/checkout_addons.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_addons.html
@@ -35,7 +35,7 @@
                                             {% endblocktrans %}
                                         {% elif c.min_count == 0 %}
                                             {% blocktrans trimmed with max_count=c.max_count %}
-                                                You can to choose up to {{ max_count }} options from this category.
+                                                You can choose up to {{ max_count }} options from this category.
                                             {% endblocktrans %}
                                         {% else %}
                                             {% blocktrans trimmed with min_count=c.min_count max_count=c.max_count %}
