--- a/src/pretix/control/templates/pretixcontrol/checkin/index.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load eventurl %}
 {% load urlreplace %}
-{% block title %}{% trans "Check-Ins" %}{% endblock %}
+{% block title %}{% trans "Check-ins" %}{% endblock %}
 {% block content %}
     <h1>{% trans "Check-ins" %}</h1>
     <p>
@@ -12,6 +12,7 @@
                 <option value="1" {% if request.GET.status == "1" %}selected="selected"{% endif %}>{% trans "Checked in" %}</option>
                 <option value="0" {% if request.GET.status == "0" %}selected="selected"{% endif %}>{% trans "Not checked in" %}</option>
             </select>
+            <input type="text" name="item" class="form-control" placeholder="{% trans "Search item" %}" value="{{ request.GET.item }}">
             <input type="text" name="user" class="form-control" placeholder="{% trans "Search user" %}" value="{{ request.GET.user }}">
             <button class="btn btn-primary" type="submit">{% trans "Filter" %}</button>
         </form>
@@ -34,8 +35,12 @@
                     <tr>
                         <th>{% trans "Order code" %} <a href="?{% url_replace request 'ordering' '-order__code'%}"><i class="fa fa-caret-down"></i></a>
                       <a href="?{% url_replace request 'ordering' 'order__code'%}"><i class="fa fa-caret-up"></i></a></th>
-                        <th>{% trans "User" %} <a href="?{% url_replace request 'ordering' '-order__email'%}"><i class="fa fa-caret-down"></i></a>
+                        <th>{% trans "Item" %} <a href="?{% url_replace request 'ordering' '-item__name'%}"><i class="fa fa-caret-down"></i></a>
+                      <a href="?{% url_replace request 'ordering' 'item__name'%}"><i class="fa fa-caret-up"></i></a></th>
+                        <th>{% trans "Email" %} <a href="?{% url_replace request 'ordering' '-order__email'%}"><i class="fa fa-caret-down"></i></a>
                       <a href="?{% url_replace request 'ordering' 'order__email'%}"><i class="fa fa-caret-up"></i></a></th>
+                        <th>{% trans "Name" %} <a href="?{% url_replace request 'ordering' '-attendee_name'%}"><i class="fa fa-caret-down"></i></a>
+                      <a href="?{% url_replace request 'ordering' 'attendee_name'%}"><i class="fa fa-caret-up"></i></a></th>
                         <th>{% trans "Status" %} <a href="?{% url_replace request 'ordering' '-checkins__id'%}"><i class="fa fa-caret-down"></i></a>
                       <a href="?{% url_replace request 'ordering' 'checkins__id'%}"><i class="fa fa-caret-up"></i></a></th>
                         <th>{% trans "Timestamp" %} <a href="?{% url_replace request 'ordering' '-checkins__datetime'%}"><i class="fa fa-caret-down"></i></a>
@@ -50,7 +55,13 @@
                                 <strong><a href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=e.order.code %}"
                         >{{ e.order.code }}</a></strong>
                             </td>
+                            <td>{{ e.item.name }}</td>
                             <td>{{ e.order.email }}</td>
+                            <td>
+                                {% if e.attendee_name %}
+                                    {{ e.attendee_name }}
+                                {% endif %}
+                            </td>
                             <td>
                                 {% if not checkin %}
                                     <span class="label label-danger">{% trans "Not checked in" %}</span>
