--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -10,6 +10,7 @@
             <legend>{% trans "E-mail settings" %}</legend>
             {% bootstrap_field form.mail_prefix layout="horizontal" %}
             {% bootstrap_field form.mail_from layout="horizontal" %}
+            {% bootstrap_field form.mail_text_signature layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "E-mail content" %}</legend>
