Fix #41 -- Drag-and-drop ticket editor
Undo/redo

Useful toolbox

Font selection

Add text content

Use hex for colors

JS-side dump and load

Save

Load layout, proper undo/redo

First steps to Python rendering

More PDF rendering

Copy and paste

Buttons for keyboard actions

Splash Screen

Block unbeforeunload in dirty state

Remove debugging output

Preview

Upload new PDFs via the editor

Fix bugs during PDF reload, link in settings form

New default ticket

Add OpenSans BI

Custom fonts, fix tests

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -11,6 +11,7 @@
 @import "_orders.scss";
 @import "_dashboard.scss";
 @import "../../pretixbase/scss/webfont.scss";
+@import "../../fileupload/jquery.fileupload.scss";
 @import "../../colorpicker/bootstrap-colorpicker.scss";
 
 footer {
